compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_does_not_expand_alias_outside_differing_subtree.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Request =\n  List(Int)\n\npub fn main(expected: Result(Request, Int), given: Result(Request, String)) {\n  expected == given\n}\n"
---
----- SOURCE CODE

pub type Request =
  List(Int)

pub fn main(expected: Result(Request, Int), given: Result(Request, String)) {
  expected == given
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:6:15
  │
6 │   expected == given
  │               ^^^^^

Expected type:

    Result(Request, Int)

Found type:

    Result(Request, String)
