compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_does_not_expand_alias_when_accessing_field_on_type_with_no_fields.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Request =\n  List(Int)\n\npub fn main(request: Request) {\n  request.connection\n}\n"
---
----- SOURCE CODE

pub type Request =
  List(Int)

pub fn main(request: Request) {
  request.connection
}


----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:6:11
  │
6 │   request.connection
  │           ^^^^^^^^^^ This field does not exist

The value being accessed has this type:

    Request

It does not have any fields.
