compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_expands_alias_inside_differing_subtree.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Request =\n  List(Int)\n\npub fn main(\n  expected: Result(Request, String),\n  given: Result(List(Float), String),\n) {\n  expected == given\n}\n"
---
----- SOURCE CODE

pub type Request =
  List(Int)

pub fn main(
  expected: Result(Request, String),
  given: Result(List(Float), String),
) {
  expected == given
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:9:15
  │
9 │   expected == given
  │               ^^^^^

Expected type:

    Result(Request, String)

Found type:

    Result(List(Float), String)

Hint: The expected type expands to:

    Result(List(Int), String)
