compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_expands_function_alias_with_shared_underlying_structure.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Callback =\n  fn(Int) -> Int\n\npub fn main(given: fn(String) -> Int) {\n  let expected: Callback = given\n}\n"
---
----- SOURCE CODE

pub type Callback =
  fn(Int) -> Int

pub fn main(given: fn(String) -> Int) {
  let expected: Callback = given
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:6:28
  │
6 │   let expected: Callback = given
  │                            ^^^^^

Expected type:

    Callback

Found type:

    fn(String) -> Int

Hint: The expected type expands to:

    fn(Int) -> Int
