compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_expands_nested_alias_at_structurally_differing_child.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Connection = List(Int)\npub type Request = Result(Connection, String)\n\npub fn main(expected: Request, given: Result(List(Float), String)) {\n  expected == given\n}\n"
---
----- SOURCE CODE

pub type Connection = List(Int)
pub type Request = Result(Connection, String)

pub fn main(expected: Request, given: Result(List(Float), String)) {
  expected == given
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:6:15
  │
6 │   expected == given
  │               ^^^^^

Expected type:

    Request

Found type:

    Result(List(Float), String)

Hint: The expected type expands to:

    Result(List(Int), String)
