compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_expands_nested_expected_alias_without_shared_underlying_structure.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type UserId =\n  Int\n\npub fn main(expected: Result(UserId, Bool), given: Result(String, Bool)) {\n  expected == given\n}\n"
---
----- SOURCE CODE

pub type UserId =
  Int

pub fn main(expected: Result(UserId, Bool), given: Result(String, Bool)) {
  expected == given
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:6:15
  │
6 │   expected == given
  │               ^^^^^

Expected type:

    Result(UserId, Bool)

Found type:

    Result(String, Bool)

Hint: The expected type expands to:

    Result(Int, Bool)
