compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_expands_nested_given_alias_without_shared_underlying_structure.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type UserId =\n  Int\n\npub fn main(expected: Result(String, Bool), given: Result(UserId, Bool)) {\n  expected == given\n}\n"
---
----- SOURCE CODE

pub type UserId =
  Int

pub fn main(expected: Result(String, Bool), given: Result(UserId, Bool)) {
  expected == given
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:6:15
  │
6 │   expected == given
  │               ^^^^^

Expected type:

    Result(String, Bool)

Found type:

    Result(UserId, Bool)

Hint: The found type expands to:

    Result(Int, Bool)
