compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_expands_top_level_expected_alias_when_underlying_shapes_differ.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type UserId = Int\n\npub fn main(user_id: UserId) {\n  user_id == \"not a user ID\"\n}\n"
---
----- SOURCE CODE

pub type UserId = Int

pub fn main(user_id: UserId) {
  user_id == "not a user ID"
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:5:14
  │
5 │   user_id == "not a user ID"
  │              ^^^^^^^^^^^^^^^

Expected type:

    UserId

Found type:

    String

Hint: The expected type expands to:

    Int
