compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_expands_top_level_expected_alias_with_different_arguments.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Box(a) =\n  List(a)\n\npub fn main(expected: Box(Int), given: Box(String)) {\n  expected == given\n}\n"
---
----- SOURCE CODE

pub type Box(a) =
  List(a)

pub fn main(expected: Box(Int), given: Box(String)) {
  expected == given
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:6:15
  │
6 │   expected == given
  │               ^^^^^

Expected type:

    Box(Int)

Found type:

    Box(String)

Hint: The expected type expands to:

    List(Int)
